--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -78,11 +78,16 @@ fos_rest:
         default_format: json                            # All responses should be JSON formated
         include_format: false                           # We do not include format in request, so that all responses
                                                         # will eventually be JSON formated
+        prefix_methods: false
     format_listener:
         rules:
-            - { priorities: ['json', 'xml'], fallback_format: json, prefer_extension: false }
+            - { priorities: ['json'], fallback_format: json, prefer_extension: false }
     view:
         view_response_listener: true
+    allowed_methods_listener: true
+    #exception:
+    #    enabled: true
+    #    exception_controller: 'AppBundle\Controller\NoteController::handlerException'
 
 fos_user:
     db_driver: orm
@@ -102,3 +107,12 @@ fos_oauth_server:
     auth_code_class:     AppBundle\Entity\AuthCode
     service:
         user_provider: fos_user.user_provider.username
+nelmio_cors:
+    defaults:
+        origin_regex: true
+        allow_origin: ['*']
+        allow_methods: ['GET', 'OPTIONS', 'POST', 'PUT', 'PATCH', 'DELETE']
+        allow_headers: ['*']
+        max_age: 3600
+    paths:
+        '^/': ~
