--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -12,10 +12,15 @@ security:
             pattern: ^/oauth/v2/token
             security: false
         api:
-            pattern: ^/                                # All URLs are protected
+            pattern: ^/require                                # All URLs are protected
             fos_oauth: true                            # OAuth2 protected resource
             stateless: true                            # Do no set session cookies
             anonymous: false                           # Anonymous access is not allowed
+        public:
+            methods: [GET, POST, PUT, DELETE, OPTIONS]
+            pattern: ^/api
+            security: false
+
 
         main:
             anonymous: ~
