--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -8,6 +8,6 @@ services:
 #        class: AppBundle\Directory\ClassName
 #        arguments: ["@another_service_name", "plain_value", "%parameter_name%"]
 
-      client.service:
-          class: AppBundle\Service\ClientService
+      note.service:
+          class: AppBundle\Service\NoteService
           arguments: ["@doctrine.orm.entity_manager"]
