--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "jms/serializer-bundle": "^2.3",
         "nelmio/api-doc-bundle": "^2.13",
         "friendsofsymfony/user-bundle": "~2.0@dev",
-        "friendsofsymfony/oauth-server-bundle": "^1.5"
+        "friendsofsymfony/oauth-server-bundle": "^1.5",
+        "nelmio/cors-bundle": "^1.5"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
